my-pod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: nginx-pod
  name: nginx-deployment
spec:  
  replicas: 4
  selector:
    matchLabels:
      name: nginx-pod
  template:
    metadata:
      name: nginx-pod
      labels:
        name: nginx-pod
    spec:
      containers:
      - name: nginx-con
        image: nginx
        ports:
        - containerPort: 80
