pod-preffered-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-preferred-affinity
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 10
        preference:
          matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd 
      - weight: 5
        preference:
          matchExpressions:
          - key: env
            operator: In
            values:
            - dev
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
