pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-recycler
  namespace: default
spec:
  containers:  
  - name: pv-recycler
    image: nginx:alpine
    volumeMounts:
    - name: vol
      mountPath: /scrub
  volumes:
  - name: vol
    persistentVolumeClaim:
      claimName: myclaim
