tt-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tt-pod
  labels:
    name: nginx-pod
spec:
  containers:
  - name: nginx-con
    image: nginx
    ports:
    - containerPort: 80
