my-pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    name: nginx-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
